--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: write
 
 jobs:
   deploy_main:
@@ -16,4 +18,11 @@ jobs:
       - run: | 
           python --version
           echo "Deploy main from commit ${{ github.event.head_commit.message }}"
+          python src/invoke.py
+      - run: |
+          git config --global user.name 'Platform Automation Bot'
+          git config --global user.email 'platform.bot@kopoutech.com'
+          git add *.keep
+          git commit -m "[SKIP CI] Automated deployment check"
+          git push
    
