--- a/.github/workflows/issue-check.yml
+++ b/.github/workflows/issue-check.yml
@@ -1,7 +1,7 @@
 name: Main workflow
 on:
   issues:
-    types: [opened]
+    types: [opened,edited]
 
 permissions:
   contents: write
@@ -16,10 +16,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: | 
+    
+      - env:
+          issue_data: ${{ toJson(github.event.issue.body) }}
+        run: | 
           python --version
-          echo "Issue title: ${{ github.event.issue.title }}"
-          echo "Issue body: `${{ toJson(github.event.issue.body) }}`"
           echo "Issue body: `${{ toJson(github.event.issue.body) }}`" > issue_data
           echo "Deploy main from commit | ${{ github.event.head_commit.message }} |"
           python src/raise.py
