[skip ci] Updated messaging

--- a/.github/workflows/issue-check.yml
+++ b/.github/workflows/issue-check.yml
@@ -31,11 +31,15 @@ jobs:
         run: |
           git config --global user.name 'Platform Automation Bot'
           git config --global user.email 'platform.bot@kopoutech.com'
-          git checkout -B "ID-${{ (github.event.issue.number) }}-automated-branch"
+          BRANCH_NAME='${{ (github.event.issue.number) }}-ID-automated-branch'
+          git checkout -B "$BRANCH_NAME"
           git add *.json
           git commit -m "[SKIP CI] Automated PR"
-          git push --set-upstream origin "ID-${{ (github.event.issue.number) }}-automated-branch"
-          gh pr create --title "Automated Deployment PR #${{ github.run_number }}" --body "PR raised from Issue - ${{ (github.event.issue.number) }} - ${{ (github.event.issue.url) }}" 
-          gh issue comment ${{ (github.event.issue.number) }} --body "Your issue is being processed using GitHub actions #${{ github.run_number }}. Branch - ID-${{ (github.event.issue.number) }}-automated-branch"
+          git push --set-upstream origin "$BRANCH_NAME"
+          gh pr create --title "Automated Deployment PR | Closes #${{ (github.event.issue.number) }}" --body "PR raised from Issue - ${{ (github.event.issue.number) }} - ${{ (github.event.issue.url) }}" > pr-url.nokeep
+          PR_URL=$(cat pr-url.nokeep)
+          ACTION_URL='${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+          gh issue comment ${{ (github.event.issue.number) }} \
+            --body "Your issue is being processed using GitHub actions $ACTION_URL. Branch - $BRANCH_NAME . PR Link: $PR_URL"
            
    
