--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -25,7 +25,7 @@ jobs:
           if [ -f changed.nokeep ]; then
             git config --global user.name 'Platform Automation Bot'
             git config --global user.email 'platform.bot@kopoutech.com'
-            git add *.keep
+            git add *
             git commit -m "[SKIP CI] Automated deployment check"
             git push
           fi
